full-moon/tests/cases/fail/parser/if-6/source.lua
if x then
else then
	call()
end